--- a/Theory-of-Languages-and-Machines/test1.tex
+++ b/Theory-of-Languages-and-Machines/test1.tex
@@ -1,4 +1,16 @@
- \documentclass[fontsize=8pt,paper=A4, DIV=9]{scrartcl}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% This file is part of the book
+%%
+%% Introduction to Automata Theory,Formal Languages and Computation
+%%                            Shyamalendu Kandar
+%%                 
+%%
+%%
+%%                           from page 445 to 448
+%%
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[fontsize=8pt,paper=A4, DIV=9]{scrartcl}
 
 \usepackage{fancyhdr}
  \usepackage[utf8]{inputenc}
