--- a/Theory-of-Languages-and-Machines/presentation.tex
+++ b/Theory-of-Languages-and-Machines/presentation.tex
@@ -249,7 +249,7 @@ In state  \textcolor{gray}{$q_{1}$}
 
 \node[state,  below right of=q0] (q4) {$q_4$};
 \node[state, below right of=q3] (q1) {$q_1$};
-\node[state, accepting, right of=q1] (qH) {$q_1$};
+\node[state, accepting, right of=q1] (qH) {$q_H$};
 
 
 \draw 
@@ -283,7 +283,7 @@ In state  \textcolor{gray}{$q_{1}$}
 
 \node[state,  below right of=q0] (q4) {$q_4$};
 \node[state, below right of=q3] (q1) {$q_1$};
-\node[state, accepting, right of=q1] (qH) {$q_1$};
+\node[state, accepting, right of=q1] (qH) {$q_H$};
 
 
 \draw 
